# TFG

./: README.md  equations.cpp  io_handler.cpp  main.cpp  optimization.cpp
data/: TrayectoriasSimuladas_Multisigmoidal_Articulo.csv
include/: equations.hpp  estimations.hpp  evolutive.hpp  io_handler.hpp  model_data.hpp  model_functions.hpp  optimization.hpp  regression.hpp  visualization.hpp
python/: prepararCSV.py  testKruskal.py  testWilcoxon.py
src/: CMakeLists.txt  estimations.cpp  evolutive.cpp  main.cpp  model_data.cpp  model_functions.cpp  regression.cpp  visualization.cpp
